part3/project-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project-app
  template:
    metadata:
      labels:
        app: dwk-project-app
    spec:
      volumes:
        - name: dwk-volume
          persistentVolumeClaim:
            claimName: dwk-volume-claim
      containers:
        - name: dwk-project-app-frontend
          image: FRONTEND_APP_IMAGE
          volumeMounts:
            - name: dwk-volume
              mountPath: /app/files
        - name: dwk-project-app-backend
          image: BACKEND_APP_IMAGE
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.27.0
          command:
            - "/cloud_sql_proxy"
            - "-instances=devopswithkubernetes:europe-north1:dwk-db=tcp:5432"
          securityContext:
            runAsNonRoot: true
