part3/project-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-project-app
spec:
  type: NodePort
  selector:
    app: dwk-project-app
  ports:
    - name: frontend
      port: 80
      protocol: TCP
      targetPort: 3003
    - name: backend
      port: 1337
      protocol: TCP
      targetPort: 3004
