part3/project-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-project-app
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: dwk-project-app
            port:
             number: 80
      - path: /todos
        pathType: ImplementationSpecific
        backend:
          service:
            name: dwk-project-app
            port:
             number: 1337
